<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright 2008-2009 The Kuali Foundation Licensed under the Educational 
	Community License, Version 2.0 (the "License"); you may not use this file 
	except in compliance with the License. You may obtain a copy of the License 
	at http://www.opensource.org/licenses/ecl2.php Unless required by applicable 
	law or agreed to in writing, software distributed under the License is distributed 
	on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either 
	express or implied. See the License for the specific language governing permissions 
	and limitations under the License. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.sigmasys.kuali.ksa</groupId>
        <artifactId>ksa-common</artifactId>
        <version>1.0.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <groupId>com.sigmasys.kuali.ksa.core</groupId>
    <artifactId>ksa</artifactId>
    <name>KSA webapp</name>

    <version>1.0.0-SNAPSHOT</version>
    <packaging>war</packaging>
    <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jvm.args>-Xmx1g -Xms1g -Xss4m -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=512m</jvm.args>
    </properties>


    <build>

        <finalName>ksa</finalName>

        <plugins>

            <!-- Maven compiler plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <verbose>true</verbose>
                    <compilerVersion>1.6</compilerVersion>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>

            <!-- Maven resource plugin -->
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${basedir}/target/test-classes</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>src/main/resources</directory>
                                    <filtering>true</filtering>
                                </resource>
                                <resource>
                                    <directory>src/test/resources</directory>
                                    <filtering>true</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Maven test plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <configuration>
                    <argLine>${jvm.args}</argLine>
                    <test>ServiceTestSuite</test>
                </configuration>
            </plugin>

            <!-- Maven war plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.3</version>
                <configuration>
                    <webXml>${basedir}/src/main/webapp/WEB-INF/web.xml</webXml>
                    <packagingExcludes>
                        WEB-INF/lib/transactions*.jar,
                        WEB-INF/lib/jta*.jar,
                        WEB-INF/lib/ojdbc*.jar,
                        WEB-INF/lib/log4j*.jar,
                        WEB-INF/lib/jboss-transaction*.jar
                    </packagingExcludes>
                </configuration>
            </plugin>

        </plugins>
    </build>


</project>

